feat: Add authorization cache supports!